tests/parser/logical-or-error.stderr
error: expected expression
 --> $DIR/logical-or-error.lox:1:9
  |
1 | true or /;
  |         ^
